// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comparator field should render default Comparator 1`] = `
<div
  className="theme-comparator"
>
  <Translate(ActionDropdown)
    id="default-operator"
    items={
      Array [
        Object {
          "id": "default-operator-0",
          "label": <OperatorListElement
            selected={false}
            value=">"
          />,
          "title": ">",
          "value": ">",
        },
        Object {
          "id": "default-operator-1",
          "label": <OperatorListElement
            selected={false}
            value="<"
          />,
          "title": "<",
          "value": "<",
        },
        Object {
          "id": "default-operator-2",
          "label": <OperatorListElement
            selected={false}
            value="="
          />,
          "title": "=",
          "value": "=",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
  />
  <ContextualWidget
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "autoFocus": undefined,
        "disabled": undefined,
        "key": Array [
          "default",
          "value",
        ],
        "readOnly": undefined,
        "required": true,
        "schema": Object {
          "type": "string",
        },
        "title": "value",
        "type": "text",
      }
    }
  />
</div>
`;

exports[`Comparator field should render disabled Comparator 1`] = `
<div
  className="theme-comparator"
>
  <Translate(ActionDropdown)
    disabled={true}
    id="default-operator"
    items={
      Array [
        Object {
          "id": "default-operator-0",
          "label": <OperatorListElement
            selected={false}
            value=">"
          />,
          "title": ">",
          "value": ">",
        },
        Object {
          "id": "default-operator-1",
          "label": <OperatorListElement
            selected={false}
            value="<"
          />,
          "title": "<",
          "value": "<",
        },
        Object {
          "id": "default-operator-2",
          "label": <OperatorListElement
            selected={false}
            value="="
          />,
          "title": "=",
          "value": "=",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
  />
  <ContextualWidget
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "autoFocus": undefined,
        "disabled": true,
        "key": Array [
          "default",
          "value",
        ],
        "readOnly": undefined,
        "required": true,
        "schema": Object {
          "type": "string",
        },
        "title": "value",
        "type": "text",
      }
    }
  />
</div>
`;
